# SecScan

./: .gitignore  .secscan-ignore.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DANGEROUS_SCANNERS.md  LICENSE  README.md  RISK_REVIEW.md  SCANNING_SAFELY.md  SECURITY.md  pyproject.toml
samples/: verify_all_tools_target.py
samples/all-tools-target/: .env.example  Dockerfile  README.md
samples/all-tools-target/dotnet-service/: Sample.csproj
samples/all-tools-target/go-service/: go.mod  main.go
samples/all-tools-target/infra/: main.tf
samples/all-tools-target/java-service/: pom.xml
samples/all-tools-target/node-app/: index.js  package-lock.json  package.json
secscan/: __init__.py  cli.py  main.py
secscan/core/: __init__.py  detect.py  github_auth.py  github_repo.py  history.py  ignore.py  installer.py  normalize.py  profiles.py  report_html.py  report_json.py  runner.py  safety.py  schema.py  security_score.py  self_install.py  vuln_db.py
secscan/tools/: __init__.py  amass_scan.py  bandit_scan.py  base.py  bundler_audit.py  cargo_audit.py  checkov.py  composer_audit.py  cyclonedx_sbom.py  dependency_check.py  dirb.py  gitleaks.py  govulncheck.py  grype_scan.py  kube_bench.py  lynis_scan.py  nikto.py  nmap.py  npm_audit.py  osv_scanner.py  pip_audit.py  safety_scan.py  semgrep.py  sqlmap.py  tls_check.py  trivy.py  web_headers.py  xsspy.py  zap.py
ui/: __init__.py  main_window.py  theme.py
ui/pages/: __init__.py  project_page.py  results_page.py  run_page.py  tools_page.py
ui/widgets/: finding_table.py  log_view.py
(+9 files in other folders)
