[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "secscan"
version = "1.0.0"
description = "SecScan - A cross-platform GUI security scanner for software projects"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "SecScan Contributors"}]

dependencies = [
    "PySide6>=6.6",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
]
scanners = [
    "checkov>=3.2",
    "pip-audit>=2.7",
    "safety>=3.0",
    "semgrep>=1.80",
    "sqlmap>=1.8",
]

[project.scripts]
secscan = "secscan.main:main"
secscan-cli = "secscan.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["secscan*", "ui*"]
